# shakyamuni

./: CMakeLists.txt  Controller.h  README.md  Test.h  main.cpp
CharacterRepresent/: CharacterRepresent.h  SimpleCharacterRepresent.cpp  SimpleCharacterRepresent.h
FeatureExtract/: FeatureExtract.cpp  FeatureExtract.h  SimpleFeatureExtract.cpp  SimpleFeatureExtract.h
PreProcess/: BinaryPreProcess.cpp  BinaryPreProcess.h  PreProcess.cpp  PreProcess.h
Types/: types.h
shakyamuni/: Controller.cpp  Controller.h  FrameProcess.cpp  FrameProcess.h  FrameProcessFactory.cpp  FrameProcessFactory.h  shakyamuni.cpp  shakyamuni.h  testVideo.avi
shakyamuni/CharacterRepresent/: CharacterRepresent.cpp  CharacterRepresent.h  ComplexCharacterRepresent.cpp  ComplexCharacterRepresent.h  GrayLevelCharacterRepresent.cpp  GrayLevelCharacterRepresent.h  SimpleCharacterRepresent.cpp  SimpleCharacterRepresent.h  SingleCharacterRepresent.cpp  SingleCharacterRepresent.h
shakyamuni/FeatureExtract/: FeatureExtract.h  SimpleFeatureExtract.cpp  SimpleFeatureExtract.h
shakyamuni/Helpers/: Exception.cpp  Exception.h  FrameProcessFactory.cpp  FrameProcessFactory.h  Utils.cpp  Utils.h
shakyamuni/PreProcess/: BinaryPreProcess.cpp  BinaryPreProcess.h  FaceDetectBasePreProcess.cpp  FaceDetectBasePreProcess.h  PreProcess.cpp  PreProcess.h  SimpleBinaryPreProcess.cpp  SimpleBinaryPreProcess.h  SimpleGreyPreProcess.cpp  SimpleGreyPreProcess.h  SimpleOutlinePreProcess.cpp  SimpleOutlinePreProcess.h
shakyamuni/TimeStamp/: CharacterRepresentWithTimeStamp.cpp  CharacterRepresentWithTimeStamp.h  FrameWithTimeStamp.cpp  FrameWithTimeStamp.h  TimeStamp.cpp  TimeStamp.h
shakyamuni/Types/: types.h
